[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"